--- a/app/static/index.html
+++ b/app/static/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
- <h1>我是大标题</h1>
+    <header id="head">挖掘机哪家强
+    </header>
+    <script src="/static/js/a.js"></script>
+    <script src="/static/js/b.js"></script>
 </body>
 </html>
