动态轮播图地址引入

--- a/app/index.html
+++ b/app/index.html
@@ -25,28 +25,28 @@
     <div class="sn-banner">
         <div class="banner-inner slide">
             <div>
-                <img src="images/banner/0.jpg" alt="">
+                <img src="http://image4.suning.cn/uimg/cms/img/154409896502364537.jpg" alt="">
             </div>
             <div>
-                <img src="images/banner/1.jpg" alt="">
+                <img src="http://image3.suning.cn/uimg/aps/material/153985423526603251.jpg" alt="">
             </div>
             <div>
-                <img src="images/banner/2.jpg" alt="">
+                <img src="//image4.suning.cn/uimg/aps/material/153993002078120678.jpg" alt="">
             </div>
             <div>
-                <img src="images/banner/3.jpg" alt="">
+                <img src="http://image3.suning.cn/uimg/aps/material/154392282330051882.jpg" alt="">
             </div>
             <div>
-                <img src="images/banner/4.jpg" alt="">
+                <img src="http://image2.suning.cn/uimg/aps/material/153960481330443856.jpg" alt="">
             </div>
             <div>
-                <img src="images/banner/5.jpg" alt="">
+                <img src="http://image1.suning.cn/uimg/cms/img/154408074474048876.jpg" alt="">
             </div>
             <div>
-                <img src="images/banner/6.jpg" alt="">
+                <img src="http://image4.suning.cn/uimg/aps/material/153976287481501941.jpg" alt="">
             </div>
             <div>
-                <img src="images/banner/7.jpg" alt="">
+                <img src="http://image4.suning.cn/uimg/aps/material/154234996500617518.jpg" alt="">
             </div>
         </div>
         <ul class="shades">
