建好两条商品信息以及商品信息通过ajax获取转换为字符串存储在本地localStorage

--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,11 @@
         </ul>
     </div>
 </div>
+    <div class="detailp" style="width:100px;height: 100px;background: red">
+
+    </div>
     <script src="js/jquery.js"></script>
+    <script src="js/indexp.js"></script>
     <script src="js/move1.1.0.js"></script>
     <script src="js/swiper2.0.js"></script>
     <script src="js/changeImg.js"></script>
