--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/banner.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/shades.css">
+    <link rel="stylesheet" href="css/indexp.css">
 </head>
 
 <body>
@@ -109,8 +110,17 @@
         </ul>
     </div>
 </div>
-    <div class="detailp" style="width:100px;height: 100px;background: red">
-
+    <div class="detailp">
+        <li>0</li>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/indexp.js"></script>
