--- a/app/index.html
+++ b/app/index.html
@@ -14,48 +14,48 @@
 </head>
 
 <body>
-    
+
     <div id="contentp">
         <div class='left_bannerp'>
-                <img  src="images/shades/left.png" alt="">
+            <img src="images/shades/left.png" alt="">
         </div>
         <div class="right_bannerp">
-                <img  src="images/shades/right.png" alt="">
+            <img src="images/shades/right.png" alt="">
         </div>
-   
-    <div class="sn-banner">
-        <div class="banner-inner slide">
-            <div>
-                <img src="http://image4.suning.cn/uimg/cms/img/154409896502364537.jpg" alt="">
+
+        <div class="sn-banner">
+            <div class="banner-inner slide">
+                <div>
+                    <img src="http://image4.suning.cn/uimg/cms/img/154409896502364537.jpg" alt="">
+                </div>
+                <div>
+                    <img src="http://image3.suning.cn/uimg/aps/material/153985423526603251.jpg" alt="">
+                </div>
+                <div>
+                    <img src="//image4.suning.cn/uimg/aps/material/153993002078120678.jpg" alt="">
+                </div>
+                <div>
+                    <img src="http://image3.suning.cn/uimg/aps/material/154392282330051882.jpg" alt="">
+                </div>
+                <div>
+                    <img src="http://image2.suning.cn/uimg/aps/material/153960481330443856.jpg" alt="">
+                </div>
+                <div>
+                    <img src="http://image1.suning.cn/uimg/cms/img/154408074474048876.jpg" alt="">
+                </div>
+                <div>
+                    <img src="http://image4.suning.cn/uimg/aps/material/153976287481501941.jpg" alt="">
+                </div>
+                <div>
+                    <img src="http://image4.suning.cn/uimg/aps/material/154234996500617518.jpg" alt="">
+                </div>
             </div>
-            <div>
-                <img src="http://image3.suning.cn/uimg/aps/material/153985423526603251.jpg" alt="">
-            </div>
-            <div>
-                <img src="//image4.suning.cn/uimg/aps/material/153993002078120678.jpg" alt="">
-            </div>
-            <div>
-                <img src="http://image3.suning.cn/uimg/aps/material/154392282330051882.jpg" alt="">
-            </div>
-            <div>
-                <img src="http://image2.suning.cn/uimg/aps/material/153960481330443856.jpg" alt="">
-            </div>
-            <div>
-                <img src="http://image1.suning.cn/uimg/cms/img/154408074474048876.jpg" alt="">
-            </div>
-            <div>
-                <img src="http://image4.suning.cn/uimg/aps/material/153976287481501941.jpg" alt="">
-            </div>
-            <div>
-                <img src="http://image4.suning.cn/uimg/aps/material/154234996500617518.jpg" alt="">
-            </div>
-        </div>
-        <ul class="shades">
+            <ul class="shades">
                 <li>
                     <div>
-                    <p>空调狂欢购</p>
-                    <p>用券可省1000</p>
-                </div>
+                        <p>空调狂欢购</p>
+                        <p>用券可省1000</p>
+                    </div>
                     <img src="images/shades/air2.jpg" alt="">
                     <img src="images/shades/air0.jpg" alt="">
                     <img src="images/shades/air1.jpg" alt="">
@@ -63,64 +63,94 @@
                 </li>
                 <li>
                     <div>
-                    <p>手机品牌惠</p>
-                    <p>抢券立减</p>
-                    <img src="images/shades/tell3.jpg" alt="">
-                    <img src="images/shades/tell0.jpg" alt="">
-                    <img src="images/shades/tell1.jpg" alt="">
-                    <img src="images/shades/tell2.jpg" alt="">
-                </div>
-                
+                        <p>手机品牌惠</p>
+                        <p>抢券立减</p>
+                        <img src="images/shades/tell3.jpg" alt="">
+                        <img src="images/shades/tell0.jpg" alt="">
+                        <img src="images/shades/tell1.jpg" alt="">
+                        <img src="images/shades/tell2.jpg" alt="">
+                    </div>
+
                     <img src="" alt="">
                 </li>
                 <li>
                     <div>
-                    <p>汽车用品</p>
-                    <p>抢车品神券</p>
-                    <img src="images/shades/0.jpg" alt="">
-                    <img src="images/shades/1.jpg" alt="">
-                    <img src="images/shades/2.jpg" alt="">
-                    <img src="images/shades/3.jpg" alt="">
-                </div>
+                        <p>汽车用品</p>
+                        <p>抢车品神券</p>
+                        <img src="images/shades/0.jpg" alt="">
+                        <img src="images/shades/1.jpg" alt="">
+                        <img src="images/shades/2.jpg" alt="">
+                        <img src="images/shades/3.jpg" alt="">
+                    </div>
                     <img src="" alt="">
                 </li>
                 <li>
                     <div>
-                    <p>活力全开</p>
-                    <p>每满300减30</p>
-                    <img src="images/shades/xiangji0.jpg" alt="">
-                    <img src="images/shades/xiangji1.jpg" alt="">
-                    <img src="images/shades/xiangji2.jpg" alt="">
-                    <img src="images/shades/xiangji3.jpg" alt="">
-                </div>
+                        <p>活力全开</p>
+                        <p>每满300减30</p>
+                        <img src="images/shades/xiangji0.jpg" alt="">
+                        <img src="images/shades/xiangji1.jpg" alt="">
+                        <img src="images/shades/xiangji2.jpg" alt="">
+                        <img src="images/shades/xiangji3.jpg" alt="">
+                    </div>
                     <img src="" alt="">
                 </li>
             </ul>
-        <div class="left-btn "></div>
-        <div class="right-btn"></div>
-        <ul class="banner-tip">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+            <div class="left-btn "></div>
+            <div class="right-btn"></div>
+            <ul class="banner-tip">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
     </div>
-</div>
     <div class="detailp">
-        <li>0</li>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-        <li>8</li>
-        <li>9</li>
+        <li>
+            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/gsottk1v11q8WkoPSA3yVQ.jpg_800w_800h_4e"
+                alt="">
+        </li>
+        <li>
+            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/L21WQcMXaUfeEUICdiRAGQ.jpg_800w_800h_4e"
+                alt="">
+        </li>
+        <li>
+            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/pcms/newcatentries/AO4yWkzrVVqs-1cs32stKg.jpg_800w_800h_4e"
+                alt="">
+        </li>
+        <li>
+            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/9ltx6e3NAfTKngrmqR2sOw.jpg_800w_800h_4e"
+                alt="">
+        </li>
+        <li>
+            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/yhdVIiY1aF84Gyyq9sscFg.jpg_800w_800h_4e"
+                alt="">
+        </li>
+        <li>
+            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/foQ0gJUgnjx79drSyLRT8w.jpg_800w_800h_4e"
+                alt="">
+        </li>
+        <li>
+            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/8ZqI8J78fg8bXqYIOFhHBw.jpg_800w_800h_4e"
+                alt="">
+        </li>
+        <li>
+            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/Lhyduqc_MLNR7bWVAqhzZw.png_800w_800h_4e"
+                alt="">
+        </li>
+        <li>
+            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/lntOyYNjpfZ_DBWlSZ_-nQ.jpg_800w_800h_4e"
+                alt="">
+        </li>
+        <li>
+            <img style="width: 100px;height: 100px;" src="http://image.suning.cn/uimg/b2c/newcatentries/0070139843-000000010065237945_2.jpg_800w_800h_4e"
+                alt="">
+        </li>
     </div>
     <script src="js/jquery.js"></script>
     <script src="js/indexp.js"></script>
@@ -129,10 +159,10 @@
     <script src="js/changeImg.js"></script>
     <script src="js/shades.js"></script>
     <script>
-       var changeIname = new ChangeImage({
-           el: '.sn-banner'
-       });
-       changeIname.init();
+        var changeIname = new ChangeImage({
+            el: '.sn-banner'
+        });
+        changeIname.init();
 
     </script>
 </body>
