修改了尾部的居中问题

--- a/app/index.html
+++ b/app/index.html
@@ -257,8 +257,8 @@
             </div>
             <div class="header-right">
                 <div class="d-zhucedenglu">
-                    <a href="#">
-                        请登录
+                    <a  class="none-block" >
+                        
                     </a>
                     <a href="#">
                         注册有礼
@@ -768,6 +768,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/header-footer.js"></script>
     <script src="js/indexp.js"></script>
+    <script src="js/login-zdb.js"></script>
     <script src="js/move1.1.0.js"></script>
     <script src="js/swiper2.0.js"></script>
     <script src="js/changeImg.js"></script>
