--- a/app/index.html
+++ b/app/index.html
@@ -365,15 +365,7 @@
             </ul>
         </div>
     </div>
-    <!-- 头部已完成 -->
-
-
-
-
-
-
-
-
+    <!-- 头部 -->
     <div id="contentp">
         <div class='left_bannerp'>
             <img src="images/shades/left.png" alt="">
@@ -469,6 +461,7 @@
             </ul>
         </div>
     </div>
+    <!-- 轮播图 -->
     <div class="detailp">
         <li>
             <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/gsottk1v11q8WkoPSA3yVQ.jpg_800w_800h_4e"
@@ -511,6 +504,7 @@
                 alt="">
         </li>
     </div>
+    <!-- 详情页 -->
     <div id="footerd">
         <div class="footerd-box1">
             <div class="footerd-boxup">
@@ -765,6 +759,7 @@
             <div class="footerd-img"></div>
         </div>
     </div>
+    <!-- 尾部 -->
     <script src="js/jquery.js"></script>
     <script src="js/header-footer.js"></script>
     <script src="js/indexp.js"></script>
