引入公共头部和尾部

--- a/app/index.html
+++ b/app/index.html
@@ -462,45 +462,46 @@
         </div>
     </div>
     <!-- 轮播图 -->
+    <div style="width:1200px;min-height: 100px;margin:0 auto"><img src="http://image3.suning.cn/uimg/cms/img/154443464365595335.png" alt=""></div>
     <div class="detailp">
         <li>
-            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/gsottk1v11q8WkoPSA3yVQ.jpg_800w_800h_4e"
+            <img style="width: 200px;height: 200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/gsottk1v11q8WkoPSA3yVQ.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/L21WQcMXaUfeEUICdiRAGQ.jpg_800w_800h_4e"
+            <img style="width:200px;height: 200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/L21WQcMXaUfeEUICdiRAGQ.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/pcms/newcatentries/AO4yWkzrVVqs-1cs32stKg.jpg_800w_800h_4e"
+            <img style="width: 200px;height:200px;" src="http://imgservice.suning.cn/uimg1/pcms/newcatentries/AO4yWkzrVVqs-1cs32stKg.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/9ltx6e3NAfTKngrmqR2sOw.jpg_800w_800h_4e"
+            <img style="width: 200px;height: 200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/9ltx6e3NAfTKngrmqR2sOw.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/yhdVIiY1aF84Gyyq9sscFg.jpg_800w_800h_4e"
+            <img style="width: 200px;height: 200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/yhdVIiY1aF84Gyyq9sscFg.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/foQ0gJUgnjx79drSyLRT8w.jpg_800w_800h_4e"
+            <img style="width: 200px;height:200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/foQ0gJUgnjx79drSyLRT8w.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/8ZqI8J78fg8bXqYIOFhHBw.jpg_800w_800h_4e"
+            <img style="width:200px;height:200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/8ZqI8J78fg8bXqYIOFhHBw.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/Lhyduqc_MLNR7bWVAqhzZw.png_800w_800h_4e"
+            <img style="width: 200px;height: 200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/Lhyduqc_MLNR7bWVAqhzZw.png_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 100px;height: 100px;" src="http://imgservice.suning.cn/uimg1/b2c/image/lntOyYNjpfZ_DBWlSZ_-nQ.jpg_800w_800h_4e"
+            <img style="width: 200px;height: 200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/lntOyYNjpfZ_DBWlSZ_-nQ.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 100px;height: 100px;" src="http://image.suning.cn/uimg/b2c/newcatentries/0070139843-000000010065237945_2.jpg_800w_800h_4e"
+            <img style="width:200px;height: 200px;" src="http://image.suning.cn/uimg/b2c/newcatentries/0070139843-000000010065237945_2.jpg_800w_800h_4e"
                 alt="">
         </li>
     </div>
