登录后显示用户名但是跳转页面用户名就不见了

--- a/app/index.html
+++ b/app/index.html
@@ -307,7 +307,7 @@
                         </div>
                         <form action="" method="POST"></form>
                         <div class="gouwuchela-html">
-                            <input type="submit" value="登录" id="gwcdl" name="gwcdl">
+                            <input type="submit" value="" id="gwcdl" name="gwcdl">
                         </div>
                         </form>
                     </div>
@@ -774,7 +774,8 @@
             el: '.sn-banner'
         });
         changeIname.init();
-
+        const $login = new login_zdb();
+         $login.init();
     </script>
 </body>
 
