--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/indexp.css">
     <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="fonts/font_958122_4gaqox00jt8/iconfont.css">
+    <link rel="stylesheet" href="css/navh.scss">
 </head>
 
 <body>
@@ -366,6 +367,8 @@
         </div>
     </div>
     <!-- 头部 -->
+    <div id="hj"></div>
+    <!-- 导航 -->
     <div id="contentp">
         <div class='left_bannerp'>
             <img src="images/shades/left.png" alt="">
@@ -465,47 +468,49 @@
     <div style="width:1200px;min-height: 100px;margin:0 auto"><img src="http://image3.suning.cn/uimg/cms/img/154443464365595335.png" alt=""></div>
     <div class="detailp">
         <li>
-            <img style="width: 200px;height: 200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/gsottk1v11q8WkoPSA3yVQ.jpg_800w_800h_4e"
+            <img src="http://imgservice.suning.cn/uimg1/b2c/image/gsottk1v11q8WkoPSA3yVQ.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width:200px;height: 200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/L21WQcMXaUfeEUICdiRAGQ.jpg_800w_800h_4e"
+            <img src="http://imgservice.suning.cn/uimg1/b2c/image/L21WQcMXaUfeEUICdiRAGQ.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 200px;height:200px;" src="http://imgservice.suning.cn/uimg1/pcms/newcatentries/AO4yWkzrVVqs-1cs32stKg.jpg_800w_800h_4e"
+            <img src="http://imgservice.suning.cn/uimg1/pcms/newcatentries/AO4yWkzrVVqs-1cs32stKg.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 200px;height: 200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/9ltx6e3NAfTKngrmqR2sOw.jpg_800w_800h_4e"
+            <img src="http://imgservice.suning.cn/uimg1/b2c/image/9ltx6e3NAfTKngrmqR2sOw.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 200px;height: 200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/yhdVIiY1aF84Gyyq9sscFg.jpg_800w_800h_4e"
+            <img src="http://imgservice.suning.cn/uimg1/b2c/image/yhdVIiY1aF84Gyyq9sscFg.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 200px;height:200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/foQ0gJUgnjx79drSyLRT8w.jpg_800w_800h_4e"
+            <img src="http://imgservice.suning.cn/uimg1/b2c/image/foQ0gJUgnjx79drSyLRT8w.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width:200px;height:200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/8ZqI8J78fg8bXqYIOFhHBw.jpg_800w_800h_4e"
+            <img src="http://imgservice.suning.cn/uimg1/b2c/image/8ZqI8J78fg8bXqYIOFhHBw.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 200px;height: 200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/Lhyduqc_MLNR7bWVAqhzZw.png_800w_800h_4e"
+            <img src="http://imgservice.suning.cn/uimg1/b2c/image/Lhyduqc_MLNR7bWVAqhzZw.png_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width: 200px;height: 200px;" src="http://imgservice.suning.cn/uimg1/b2c/image/lntOyYNjpfZ_DBWlSZ_-nQ.jpg_800w_800h_4e"
+            <img src="http://imgservice.suning.cn/uimg1/b2c/image/lntOyYNjpfZ_DBWlSZ_-nQ.jpg_800w_800h_4e"
                 alt="">
         </li>
         <li>
-            <img style="width:200px;height: 200px;" src="http://image.suning.cn/uimg/b2c/newcatentries/0070139843-000000010065237945_2.jpg_800w_800h_4e"
+            <img src="http://image.suning.cn/uimg/b2c/newcatentries/0070139843-000000010065237945_2.jpg_800w_800h_4e"
                 alt="">
         </li>
     </div>
-    <!-- 详情页 -->
+
+    <div id="hj-categories" style="height:1150px;width:100%"></div>
+    <!-- 尾部详情页 -->
     <div id="footerd">
         <div class="footerd-box1">
             <div class="footerd-boxup">
@@ -770,10 +775,37 @@
     <script src="js/changeImg.js"></script>
     <script src="js/shades.js"></script>
     <script>
-        var changeIname = new ChangeImage({
+    (function(){
+      var changeIname = new ChangeImage({
             el: '.sn-banner'
         });
         changeIname.init(); 
+        $('#hj').load('page/navh.html',function(){
+            let $img = document.querySelectorAll('.actShow img');
+    for(var i of $img){
+         var a = i.getAttribute('src');
+       a = a.split('/');
+       a = a[a.length-1];
+        a = '../images/nav-sort/'+ a;
+        i.src = a;
+        console.log(a)
+    }
+        })
+    }());
+
+    (function(){
+        $('#hj-categories').load('page/categories-details-h.html',function(){
+            let $img = document.querySelectorAll('.categories-details img');
+    for(var i of $img){
+         var a = i.getAttribute('src');
+       a = a.split('/');
+       a = a[a.length-1];
+        a = '../images/nav-sort/'+ a;
+        i.src = a;
+        console.log(a)
+    }
+        })
+    }());
     </script>
 </body>
 
